--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "node-sass": "^4.13.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
